Entity Field selection support (#639)
* initial field selection support

* don't rely on implicit deps

* Field selection http tests

* field selection graphql improvements from feedback

* added graphql specifics docstrings

* Bump to stable dependencies