@@ -24,9 +24,7 @@
             :url "http://www.eclipse.org/legal/epl-v10.html"
             :distribution :repo}
 
-  :jvm-opts ["-Xmx4g" ;; On some OSX VMs, this is needed to increase available memory
-             "-Djava.awt.headless=true"
-             "-XX:MaxPermSize=256m"
+  :jvm-opts ["-Djava.awt.headless=true"
              "-Dlog.console.threshold=INFO"
              "-server"]
   :pedantic? :warn
@@ -43,8 +41,25 @@
                  [prismatic/schema ~schema-version]
                  [metosin/schema-tools ~schema-tools-version]
                  [threatgrid/ctim "0.4.22"]
-                 [threatgrid/clj-momo "0.2.14"]
-
+                 [threatgrid/flanders "0.1.13"
+                  :exclusions [com.google.code.findbugs/jsr305
+                               com.andrewmcveigh/cljs-time]]
+                 [threatgrid/clj-momo "0.2.18"
+                  ;; TODO: Please remove those exclusions once the dependency upgrade is done
+                  :exclusions [metosin/schema-tools
+                               com.fasterxml.jackson.core/*
+                               com.fasterxml.jackson.dataformat/*
+                               metrics-clojure
+                               metrics-clojure-ring
+                               cheshire
+                               metrics-clojure-jvm
+                               metrics-clojure-riemann
+                               clj-http
+                               clj-time
+                               com.andrewmcveigh/cljs-time
+                               org.apache.httpcomponents/*
+                               io.dropwizard.metrics/*
+                               prismatic/schema]]
                  ;; Web server
                  [metosin/compojure-api ~compojure-api-version
                   :exclusions [com.google.code.findbugs/jsr305
@@ -63,7 +78,7 @@
 
                  ;; nREPL server
                  [org.clojure/tools.nrepl "0.2.13"]
-                 [cider/cider-nrepl "0.15.0"]
+                 [cider/cider-nrepl "0.15.1"]
 
                  ;; clients
                  [clj-http "3.4.1"]
